# TableRatings

./: .gitignore  .pre-commit-config.yaml  .pre-commit-config.yml  README.md  docker-compose.yml  dockerfile  pyproject.toml
tableratings/: manage.py
tableratings/custom_auth/: urls.py  views.py
tableratings/restaurant/: models.py  serializers.py  urls.py  views.py
tableratings/restaurant/migrations/: 0001_initial.py  0002_restaurant_rating_alter_restaurant_id.py
tableratings/reviews/: models.py  serializers.py  urls.py  views.py
tableratings/reviews/migrations/: 0001_initial.py  0002_alter_reviews_id.py
tableratings/tableratings/: asgi.py  auth.py  settings.py  urls.py  wsgi.py
tableratings/users/: models.py  serializers.py  urls.py  views.py
tableratings/users/migrations/: 0001_initial.py  0002_alter_users_email_alter_users_id_alter_users_name_and_more.py
